[package]
name = "sengen"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
categories = ["server-app", "chat", "database", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.13"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
futures = "0.3.30"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
socketioxide = { version = "0.10.0", features = ["tracing"] }
surreal-id = "0.2.1"
# surreal-simple-querybuilder = "0.7.0"
surrealdb = "1.0.2"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
uuid = "1.6.1"

